force-app/main/default/objects/Driver_License__c/Driver_License__c.object-meta.xml
<CustomObject>
    <label>Driver License</label>
    <nameField>
        <label>Driver License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Driver Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>