force-app/main/default/objects/Driver_License__c/fields/audit__c.field-meta.xml
<CustomField>
    <fullName>audit__c</fullName>
    <label>audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>