force-app/main/default/objects/Driver_License__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <label>class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>