force-app/main/default/objects/Driver_License__c/fields/date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>date_of_birth__c</fullName>
    <label>date of birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>