force-app/main/default/objects/Driver_License__c/fields/dd__c.field-meta.xml
<CustomField>
    <fullName>dd__c</fullName>
    <label>dd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>