force-app/main/default/objects/Driver_License__c/fields/donor__c.field-meta.xml
<CustomField>
    <fullName>donor__c</fullName>
    <label>donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>