force-app/main/default/objects/Driver_License__c/fields/duplicate_number__c.field-meta.xml
<CustomField>
    <fullName>duplicate_number__c</fullName>
    <label>duplicate number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>