force-app/main/default/objects/Driver_License__c/fields/dups__c.field-meta.xml
<CustomField>
    <fullName>dups__c</fullName>
    <label>dups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>