force-app/main/default/objects/Driver_License__c/fields/endorsements__c.field-meta.xml
<CustomField>
    <fullName>endorsements__c</fullName>
    <label>endorsements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>