force-app/main/default/objects/Driver_License__c/fields/expiry_date__c.field-meta.xml
<CustomField>
    <fullName>expiry_date__c</fullName>
    <label>expiry date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>