force-app/main/default/objects/Driver_License__c/fields/eyes__c.field-meta.xml
<CustomField>
    <fullName>eyes__c</fullName>
    <label>eyes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>