force-app/main/default/objects/Driver_License__c/fields/first__c.field-meta.xml
<CustomField>
    <fullName>first__c</fullName>
    <label>first</label>
    <length>255</length>
    <type>Text</type>
</CustomField>