force-app/main/default/objects/Driver_License__c/fields/hair__c.field-meta.xml
<CustomField>
    <fullName>hair__c</fullName>
    <label>hair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>