force-app/main/default/objects/Driver_License__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <label>height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>