force-app/main/default/objects/Driver_License__c/fields/issue_date__c.field-meta.xml
<CustomField>
    <fullName>issue_date__c</fullName>
    <label>issue date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>