force-app/main/default/objects/Driver_License__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <label>last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>