force-app/main/default/objects/Driver_License__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>