force-app/main/default/objects/Driver_License__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>