force-app/main/default/objects/Driver_License__c/fields/office__c.field-meta.xml
<CustomField>
    <fullName>office__c</fullName>
    <label>office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>