force-app/main/default/objects/Driver_License__c/fields/parish__c.field-meta.xml
<CustomField>
    <fullName>parish__c</fullName>
    <label>parish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>