force-app/main/default/objects/Driver_License__c/fields/previous_type__c.field-meta.xml
<CustomField>
    <fullName>previous_type__c</fullName>
    <label>previous type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>