force-app/main/default/objects/Driver_License__c/fields/race__c.field-meta.xml
<CustomField>
    <fullName>race__c</fullName>
    <label>race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>