force-app/main/default/objects/Driver_License__c/fields/replaced__c.field-meta.xml
<CustomField>
    <fullName>replaced__c</fullName>
    <label>replaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>