force-app/main/default/objects/Driver_License__c/fields/rstr__c.field-meta.xml
<CustomField>
    <fullName>rstr__c</fullName>
    <label>rstr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>