force-app/main/default/objects/Driver_License__c/fields/ss_number__c.field-meta.xml
<CustomField>
    <fullName>ss_number__c</fullName>
    <label>ss number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>