force-app/main/default/objects/Driver_License__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>