force-app/main/default/objects/Driver_License__c/fields/weight__c.field-meta.xml
<CustomField>
    <fullName>weight__c</fullName>
    <label>weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>